RESOLVED FIXED45504
[chromium] Don't call deleteTexture on a texture attached to an FBO that is not currently bound
https://bugs.webkit.org/show_bug.cgi?id=45504
Summary [chromium] Don't call deleteTexture on a texture attached to an FBO that is n...
James Robinson
Reported 2010-09-09 17:28:41 PDT
[chromium] Don't call deleteTexture on a texture attached to an FBO that is not currently bound
Attachments
Patch (2.60 KB, patch)
2010-09-09 17:32 PDT, James Robinson
no flags
Patch (2.70 KB, patch)
2010-09-09 19:08 PDT, James Robinson
kbr: review+
James Robinson
Comment 1 2010-09-09 17:32:01 PDT
James Robinson
Comment 2 2010-09-09 17:33:12 PDT
Note that in addition to this not quite doing what we want, ANGLE currently crashes if you delete a texture attached to the non-current FBO. The ANGLE crash will be fixed as well.
Kenneth Russell
Comment 3 2010-09-09 18:15:06 PDT
Comment on attachment 67123 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=67123&action=prettypatch Basically looks fine. One comment. > WebCore/platform/graphics/chromium/DrawingBufferChromium.cpp:121 > + m_context->deleteTexture(m_internal->offscreenColorTexture); You don't really need to delete the texture and create a new one in this case. All you need is to call texImage2D against the texture object again to reallocate its storage to the new size. You might consider doing that instead.
James Robinson
Comment 4 2010-09-09 19:05:11 PDT
(In reply to comment #3) > (From update of attachment 67123 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=67123&action=prettypatch > > Basically looks fine. One comment. > > > WebCore/platform/graphics/chromium/DrawingBufferChromium.cpp:121 > > + m_context->deleteTexture(m_internal->offscreenColorTexture); > You don't really need to delete the texture and create a new one in this case. All you need is to call texImage2D against the texture object again to reallocate its storage to the new size. You might consider doing that instead. That's a very good point. I'll update the patch to do it that way instead. Do I have to respecify the texParameters()s after doing that?
James Robinson
Comment 5 2010-09-09 19:08:44 PDT
James Robinson
Comment 6 2010-09-09 19:10:49 PDT
Patch assumes I don't have to specify the texParameters again (which from basic testing appears to be the case).
Kenneth Russell
Comment 7 2010-09-09 19:42:25 PDT
Comment on attachment 67138 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=67138&action=prettypatch Looks good to me. To answer your question above, no, you don't need to respecify the texture parameters -- they are associated with the texture object, and you are not deleting that, only reallocating its associated texel storage.
James Robinson
Comment 8 2010-09-09 20:25:36 PDT
Note You need to log in before you can comment on or make changes to this bug.