third_party/WebKit/WebCore/platform/graphics/chromium/DrawingBufferChromium.cpp
@@ -89,6 +89,8 @@ DrawingBuffer::~DrawingBuffer()
     if (m_internal->platformLayer)
         m_internal->platformLayer->setDrawingBuffer(0);
 #endif
+    m_context->bindFramebuffer(m_framebuffer);
+    m_context->deleteTexture(m_internal->offscreenColorTexture);
     m_context->deleteFramebuffer(m_framebuffer);
 }
 
@@ -114,9 +116,9 @@ void DrawingBuffer::reset(const IntSize& newSize)
     if (m_size == newSize)
         return;
     m_size = newSize;
-    m_context->deleteTexture(m_internal->offscreenColorTexture);
-    m_context->bindFramebuffer(m_framebuffer);
-    m_internal->offscreenColorTexture = generateColorTexture(m_context, m_size);
+
+    m_context->bindTexture(GraphicsContext3D::TEXTURE_2D, m_internal->offscreenColorTexture);
+    m_context->texImage2D(GraphicsContext3D::TEXTURE_2D, 0, GraphicsContext3D::RGBA, m_size.width(), m_size.height(), 0, GraphicsContext3D::RGBA, GraphicsContext3D::UNSIGNED_BYTE, 0);
 
 #if USE(ACCELERATED_COMPOSITING)
     if (m_internal->platformLayer)
